--- a/fr/musique_fr.html
+++ b/fr/musique_fr.html
@@ -19,7 +19,7 @@
                 <div class="nav_toogle_bar"></div>
             </div>
         </div>
-        <a class="language_header_fr" href="./en/index_en.html">
+        <a class="language_header_fr" href="/en/music_en.html">
             <img src="/public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
         </a>
         <h2 class="btb_header_fr">Back To Back</h2>
@@ -69,7 +69,7 @@
             <p class="musique_article_texte_content">Les légendes qui sont des personnes fortes pour nous : amis / sœur / frère / famille / ou bien plus.</p>
             <p class="musique_article_texte_content">La musique est disponible à l’écoute à ce lien :</p>
             <div class="musique_article_texte_link">
-            <a href="https://www.youtube.com/watch?v=4Q46xYqUwZQ">https://www.youtube.com/watch?v=4Q46xYqUwZQ</a>
+            <a href="https://www.youtube.com/watch?v=4Q46xYqUwZQ" target="_blank">https://www.youtube.com/watch?v=4Q46xYqUwZQ</a>
             </div>
             <p class="musique_article_texte_content">Pour en revenir à l’utilisation de la chanson, elle est utilisée surtout autour de l’univers <strong>« League of Legends »</strong> mais c’est quoi ?</p>
             <img src="../public/img/Image_lol.webp" alt="Image League of Legends">
@@ -79,7 +79,7 @@
             <p class="musique_article_texte_content">A la base, LOL, abréviation du nom du jeu vidéo, est surtout un jeu de stratégie sorti en 2009. Il regroupe un jeu dans une arène de bataille en ligne, free-to-play développé par Riot Games. Le mode principal du jeu est de voir s’affronter deux équipes de 5 joueurs en temps réel. Le but étant de détruire la base de l’ennemie. Les batailles peuvent durer de 30 min à 1h lors de grande prolongation.</p>
             <p class="musique_article_texte_content">Pour plus d’informations, le jeu est disponible à l’installation à ce lien :</p>
             <div class="musique_article_texte_link">
-            <a href="https://www.leagueoflegends.com/fr-fr/">https://www.leagueoflegends.com/fr-fr/</a>
+            <a href="https://www.leagueoflegends.com/fr-fr/" target="_blank">https://www.leagueoflegends.com/fr-fr/</a>
             </div>
         </article>
     </main>
