--- a/en/book_en.html
+++ b/en/book_en.html
@@ -29,7 +29,7 @@
                 <img class="round-header" src="../public/icone/Round_face.svg" alt="Image Face round">
             </div>
             <div class="element-header-texte-8">
-                <h1 class="h1-header-en">State of emergency</h1>
+                <h1 class="h1-header-en-book">State of emergency</h1>
             </div>
         </div>
         
