--- a/en/book_en.html
+++ b/en/book_en.html
@@ -93,7 +93,7 @@
             <h3 class="livre_article_texte_tittle">For more information,</h3>
             <p class="livre_article_texte_content">Article regretting "global warming":</p>
             <div class="livre_article_texte_content_center">
-            <a class="livre_article_texte_content_center" href="/fr/regret_fr.html">Click here</a>
+            <a class="livre_article_texte_content_center" href="/en/regret_en.html">Click here</a>
             </div>
             <p class="livre_article_texte_content">State of Emergency, Michael Crichton :</p>
             <div class="livre_article_texte_link">
