--- a/en/hope_en.html
+++ b/en/hope_en.html
@@ -67,7 +67,7 @@
             <p class="espoir_article_texte_content">We must act quickly, time is short!</p>
             <p class="espoir_article_texte_content">Next article: "Global warming</p>
             <div class="espoir_article_texte_content_center">
-            <a class="espoir_article_texte_content_center" href="/fr/regret_fr.html">Click here</a>
+            <a class="espoir_article_texte_content_center" href="/en/regret_en.html">Click here</a>
             </div>
         </article>
     </main>
