--- a/en/music_en.html
+++ b/en/music_en.html
@@ -54,7 +54,7 @@
         <p class="musique_article_intro">The music was originally intended to be the soundtrack for Fast and Furious 7, but it turned out to be a tribute to Paul Walker who died in a car accident during the filming of the 7th installment of the saga.</p>
         <p class="musique_article_intro">Let us return to our subject,</p> 
         <p class="musique_article_intro">What is LND?</p>
-        <img src="../public/img/musique_legends_1.webp" alt="Image Musique Legends nerver die">
+        <img src="../public/img/musique_legends_1.webp" alt="Image Music Legends nerver die">
 
         <article>
             <h3 class="musique_article_texte_tittle">What is LND?</h3>
