Global Warming CSS EN

--- a/fr/regret_fr.html
+++ b/fr/regret_fr.html
@@ -19,7 +19,7 @@
                 <div class="nav_toogle_bar"></div>
             </div>
         </div>
-        <a class="language_header_fr" href="./en/index_en.html">
+        <a class="language_header_fr" href="/en/regret_en.html">
             <img src="/public/icone/Boutton_Language-fr.svg" alt="Bouton changement de langue FR->EN">
         </a>
         <h2 class="btb_header_fr">Back To Back</h2>
