--- a/en/hope_en.html
+++ b/en/hope_en.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site web du projet Back To Back">
-    <title>Back To Back - Sauvez la planète</title>
+    <title>Back To Back - Save the Planet</title>
     <link rel="icon" href="../public/img/favicon.webp">
     <link rel="stylesheet" href="/src/css/pages/style.css" type="text/css"/>
 </head>
