--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p class="intro-accueil-fr">Vous voulez savoir comment c’était à 
             notre époque en 2022 ? Eh bien, ce site 
             est fait pour vous ! Retrouvez comment
-            les combats dans le monde était perçu
+            les combats dans le monde étaient perçus
             à l’époque. Si vous lisez ses lignes c’est
              que vous avez gagné ou pas...</p>
             
@@ -104,7 +104,7 @@
         <ul class="liens_footer">
         <li><a class="liens_footer" href="/index.html">ACCUEIL</a></li>
         <li><a class="liens_footer" href="/fr/glossaire_fr.html">GLOSSAIRE</a></li>
-        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRE PROJETS</a></li>
+        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRES PROJETS</a></li>
         <li><a class="liens_footer" href="/fr/apropos_fr.html">À PROPOS</a></li>
         <li><a class="liens_footer" href="/fr/contact_fr.html">CONTACT</a></li>
         </ul>
