--- a/fr/apropos_fr.html
+++ b/fr/apropos_fr.html
@@ -51,8 +51,8 @@
     <main>
         <img class="avatar_image" src="../public/img/Avatar_1.webp" alt="Avatar de l'auteur du site">
         <p class="app_article_texte_content">Je me présente, je suis Gaspard, j’ai 18 ans et je suis étudiant au BUT MMI de Montbéliard.</p>
-        <p class="app_article_texte_content">Nous devions réaliser ce site internet pour notre projet individuel du 1er semestre, j’espère que celui-ci vous a plus !</p>
-        <p class="app_article_texte_content">Plus d’infos sur moi, je suis avant tout un passionné de jeux vidéo, j’adore jouer a différents jeux... J’aime aussi produire et réaliser des vidéos sur YouTube mais aussi faire des lives en direct sur Twitch.</p>
+        <p class="app_article_texte_content">Nous devions réaliser ce site internet pour notre projet individuel du 1er semestre, j’espère que celui-ci vous a plu !</p>
+        <p class="app_article_texte_content">Plus d’infos sur moi, je suis avant tout un passionné de jeux vidéo, j’adore jouer à différents jeux... J’aime aussi produire et réaliser des vidéos sur YouTube mais aussi faire des lives en direct sur Twitch.</p>
         <p class="app_article_texte_content">Ma devise n’est autre que : “Mon objectif, vous faire découvrir ma passion”</p>
         <p class="app_article_texte_content">Dans le futur, j’aimerai pourquoi pas fonder mon entreprise de création de contenus.</p>
         <p class="app_article_texte_content">Enfin bref, c’est tout pour moi...</p>
@@ -76,7 +76,7 @@
         <ul class="liens_footer">
         <li><a class="liens_footer" href="/index.html">ACCUEIL</a></li>
         <li><a class="liens_footer" href="/fr/glossaire_fr.html">GLOSSAIRE</a></li>
-        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRE PROJETS</a></li>
+        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRES PROJETS</a></li>
         <li><a class="liens_footer" href="/fr/apropos_fr.html">À PROPOS</a></li>
         <li><a class="liens_footer" href="/fr/contact_fr.html">CONTACT</a></li>
         </ul>
