--- a/fr/autreprojets_fr.html
+++ b/fr/autreprojets_fr.html
@@ -29,7 +29,7 @@
                 <img class="round-header" src="../public/icone/Round_face.svg" alt="Image Face round">
             </div>
             <div class="element-header-texte-2">
-                <h1 class="h1-header">Autre projets</h1>
+                <h1 class="h1-header">Autres projets</h1>
             </div>
         </div>
 
@@ -143,7 +143,7 @@
         <ul class="liens_footer">
         <li><a class="liens_footer" href="/index.html">ACCUEIL</a></li>
         <li><a class="liens_footer" href="/fr/glossaire_fr.html">GLOSSAIRE</a></li>
-        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRE PROJETS</a></li>
+        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRES PROJETS</a></li>
         <li><a class="liens_footer" href="/fr/apropos_fr.html">À PROPOS</a></li>
         <li><a class="liens_footer" href="/fr/contact_fr.html">CONTACT</a></li>
         </ul>
