--- a/fr/contact_fr.html
+++ b/fr/contact_fr.html
@@ -89,7 +89,7 @@
         <ul class="liens_footer">
         <li><a class="liens_footer" href="/index.html">ACCUEIL</a></li>
         <li><a class="liens_footer" href="/fr/glossaire_fr.html">GLOSSAIRE</a></li>
-        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRE PROJETS</a></li>
+        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRES PROJETS</a></li>
         <li><a class="liens_footer" href="/fr/apropos_fr.html">À PROPOS</a></li>
         <li><a class="liens_footer" href="/fr/contact_fr.html">CONTACT</a></li>
         </ul>
