correction film fr

--- a/fr/film_fr.html
+++ b/fr/film_fr.html
@@ -67,9 +67,9 @@
         <h3 class="film_article_texte_tittle">Top Gun, c'est quoi ?</h3>
         <p class="film_article_texte_content">
         Quand on prononce juste ses deux mots cela résume tout un sens, 
-        tout un regard pour les films d’action, car oui c’est un film d’action avec beaucoup d’effets spéciaux et de scène/plan à couper le souffle qui a marqué le cinéma. 
-        Il existe pour l’instant 2 films pour cette franchise, Top Gun sorti en 1986 est celui qui a propulsé la carrière au cinéma de l’acteur principale Tom Cruise. Mais aussi, 
-        Top Gun Maverick la suite du premier de 1986 sorti récemment en 2022, il est sans doute encore disponible dans le cinéma le plus proche de chez vous à l’heure où vous lisez ses lignes.
+        tout un regard pour les films d’action, car oui c’est un film d’action avec beaucoup d’effets spéciaux et de scènes/plans à couper le souffle qui a marqué le cinéma. 
+        Il existe pour l’instant 2 films pour cette franchise, Top Gun sorti en 1986 est celui qui a propulsé la carrière au cinéma de l’acteur principal Tom Cruise. Mais aussi, 
+        Top Gun Maverick la suite 1986 sorti récemment en 2022, il est sans doute encore disponible dans le cinéma le plus proche de chez vous à l’heure où vous lisez ses lignes.
         </p>
 
         <img class="film_article_image_secondary" src="../public/img/Top_Gun_1986.webp" alt="Jaquette du film Top Gun de 1986">
@@ -90,7 +90,7 @@
         </article>
         <article>
             <h3 class="film_article_texte_tittle">2022</h3>
-            <p class="film_article_texte_content">Toujours pas convaincu ? He bien voici un résumé de la suite sorti en 2022. (spoiler alert)</p>
+            <p class="film_article_texte_content">Toujours pas convaincu ? He bien voici un résumé de la suite sortie en 2022. (spoiler alert)</p>
             <p class="film_article_texte_content">« Le pilote de chasse et capitaine de vaisseau « Maverick » est de retour. 
                 (déjà présent en 1986) après 30 ans de service, 
                 il se retrouve pilote d’essai pour tester un nouveau prototype d’avion supersonique. 
@@ -118,14 +118,14 @@
         </article>
         <article>
             <h3 class="film_article_texte_tittle">En savoir plus sur le réalisateur,</h3>
-            <p class="film_article_texte_content">A l’origine, les deux films Top Gun n’ont pas été réaliser par le même le réalisateur :</p>
+            <p class="film_article_texte_content">A l’origine, les deux films Top Gun n’ont pas été réalisés par le même le réalisateur :</p>
             <p class="film_article_texte_content">Tony Scott, pour celui de 1986 et Joseph Kosinski pour celui sorti en 2022.</p>
-            <p class="film_article_texte_content">Tony Scott malheureusement décédé nous allons plus tôt vous présenter Joseph Kosinki sans pour autant blâmer les mérites de 
+            <p class="film_article_texte_content">Tony Scott malheureusement décédé nous allons plutôt vous présenter Joseph Kosinki sans pour autant blâmer les mérites de 
                 celui-ci.</p>
             <p class="film_article_texte_content">Joseph Kosinki né le 3 mai 1974 à Marshalltown dans l’Iowa. 
                 C’est un réalisateur reconnu dans le domaine de l’infographie et l’imagerie générée par ordinateur.
                 Il fait ses débuts sur grand écran avec le film de science-fiction « Disney Digital 3-D Tron : L’héritage. (suite du film de 1982 Tron).</p>
-            <p class="film_article_texte_content">Son œuvre précédente a été principalement constituée de publicités notamment : Starry Night, la bande d’annonce officiel de Halo 3 et Mad World, la bande d’annonce officiel de Gears of War.</p>
+            <p class="film_article_texte_content">Son œuvre précédente a été principalement constituée de publicités notamment : Starry Night, la bande annonce officielle de Halo 3 et Mad World, la bande annonce officielle de Gears of War.</p>
             <p class="film_article_texte_content">Il réalise également Top Gun Maverick sorti en 2022.</p>
             <img class="film_article_image_secondary" src="../public/img/Filmographie.webp" alt="Image d'illustration de la Filmographie">
         </article>
@@ -150,9 +150,9 @@
                 <li class="film_article_texte_list">2011 : Halo 4 : Awakening</li>
             </ul>
             <img class="film_article_image_secondary" src="../public/img/Gears_of_war.webp" alt="Image Gears of war">
-            <p class="film_article_texte_content_center">Gears of War est un jeu vidéo créée par Epic Games, c'est un jeux vidéo de tir en 3nd personne (TPS)</p>
+            <p class="film_article_texte_content_center">Gears of War est un jeu vidéo créé par Epic Games, c'est un jeux vidéo de tir en 3nd personne (TPS)</p>
             <img class="film_article_image_secondary" src="../public/img/Halo_3.webp" alt="Image Halo 3">
-            <p class="film_article_texte_content_center">Halo 3 est un jeu vidéo créée par Bungie Studios, c'est un jeux vidéo de tir a la 1ere personne (FPS)</p>
+            <p class="film_article_texte_content_center">Halo 3 est un jeu vidéo créé par Bungie Studios, c'est un jeu vidéo de tir a la 1ere personne (FPS)</p>
             <img class="film_article_image_secondary" src="../public/img/Halo_4.webp" alt="Image Halo 4">
             <p class="film_article_texte_content_center">Halo 4 est un jeu vidéo créée par 343 Industries, c'est un jeux viéo de tir a ma 1ere personne (FPS)(suite de Halo 3)</p>
         </article>
@@ -178,7 +178,7 @@
         <ul class="liens_footer">
         <li><a class="liens_footer" href="/index.html">ACCUEIL</a></li>
         <li><a class="liens_footer" href="/fr/glossaire_fr.html">GLOSSAIRE</a></li>
-        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRE PROJETS</a></li>
+        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRES PROJETS</a></li>
         <li><a class="liens_footer" href="/fr/apropos_fr.html">À PROPOS</a></li>
         <li><a class="liens_footer" href="/fr/contact_fr.html">CONTACT</a></li>
         </ul>
