correction glossaire fr

--- a/fr/glossaire_fr.html
+++ b/fr/glossaire_fr.html
@@ -53,15 +53,15 @@
 
         <article>
             <h3 class="glossaire_article_texte_tittle">Spoil/Spoiler Alert :</h3>
-            <p class="glossaire_article_texte_content">Gâcher le plaisir d’une personne en lui dévoilant l’histoire d’un/d’une film/séries qu’il n’a pas encore vue.</p>
+            <p class="glossaire_article_texte_content">Gâcher le plaisir d’une personne en lui dévoilant l’histoire d’un/d’une film/série qu’il n’a pas encore vu.</p>
         </article>
         <article>
             <h3 class="glossaire_article_texte_tittle">FPS :</h3>
-            <p class="glossaire_article_texte_content">Terme employé dans le jeux vidéo pour définir la vue du joueur, dans ce cas-ci, FPS signifie “First Person Shooter” ou jeu de tir à la première personne.</p>
+            <p class="glossaire_article_texte_content">Terme employé dans les jeux vidéo pour définir la vue du joueur, dans ce cas-ci, FPS signifie “First Person Shooter” ou jeu de tir à la première personne.</p>
         </article>
         <article>
             <h3 class="glossaire_article_texte_tittle">TPS :</h3>
-            <p class="glossaire_article_texte_content">Terme employé dans le jeux vidéo pour définir la vue du joueur, dans ce cas-ci, TPS signifie “Third Person Shooter” ou jeu de tir à la troisième personne.</p>
+            <p class="glossaire_article_texte_content">Terme employé dans les jeux vidéo pour définir la vue du joueur, dans ce cas-ci, TPS signifie “Third Person Shooter” ou jeu de tir à la troisième personne.</p>
         </article>
         <article>
             <h3 class="glossaire_article_texte_tittle">Free-To-Play :</h3>
@@ -81,7 +81,7 @@
         <ul class="liens_footer">
         <li><a class="liens_footer" href="/index.html">ACCUEIL</a></li>
         <li><a class="liens_footer" href="/fr/glossaire_fr.html">GLOSSAIRE</a></li>
-        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRE PROJETS</a></li>
+        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRES PROJETS</a></li>
         <li><a class="liens_footer" href="/fr/apropos_fr.html">À PROPOS</a></li>
         <li><a class="liens_footer" href="/fr/contact_fr.html">CONTACT</a></li>
         </ul>
