correction lieu FR

--- a/fr/lieu_fr.html
+++ b/fr/lieu_fr.html
@@ -42,20 +42,20 @@
                 <li><a href="/fr/espoir_fr.html">> Sauver la planète</a></li>
                 <li><a href="/fr/regret_fr.html">> Le réchauffement climatique</a></li>
                 <li><a href="/fr/glossaire_fr.html">> Glossaire</a></li>
-                <li><a href="/fr/autreprojets_fr.html">> Autre projets</a></li>
+                <li><a href="/fr/autreprojets_fr.html">> Autres projets</a></li>
                 <li><a href="/fr/apropos_fr.html">> À propos</a></li>
                 <li><a href="/fr/contact_fr.html">> Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <p class="lieu_article_intro">Parmi les villes, à l’échelle national, beaucoup sont celles qui commencent à réagir face au changement climatique en mettant en place de plus en plus d’infrastructure ou autre projet qui sont « environnement friendly » On peut citer comme ex, la ville de Paris qui met en avant l’utilisation du vélo par la création de piste cyclables favorisant donc le déplacement à vélo plutôt quand voiture et aussi afin de désengorger la ville de ses immenses embouteillages.</p>
+        <p class="lieu_article_intro">Parmi les villes, à l’échelle nationale, beaucoup sont celles qui commencent à réagir face au changement climatique en mettant en place de plus en plus d’infrastructures ou autres projets qui sont « environnement friendly » On peut citer comme ex, la ville de Paris qui met en avant l’utilisation du vélo par la création de pistes cyclables favorisant donc le déplacement à vélo plutôt qu'en voiture et aussi afin de désengorger la ville de ses immenses embouteillages.</p>
         <p class="lieu_article_intro">Parmi ses villes, l’une d’elle a retenu notre attention, c’est Besançon.</p>
         <img src="../public/img/BESAC_1.webp" alt="Photo de la ville de Besançon">
         
         <article>
             <h3 class="lieu_article_texte_tittle">Besançon, c'est quoi ?</h3>
-            <p class="lieu_article_texte_content">C’est la capitale du Doubs, un département de la région Bourgogne Franche-Comté anciennement la Franche-Comté seule. <strong>Besançon</strong> est une commune de <strong>118 647 habitants</strong>, situé dans l’Est de la France. Elle est le siège de la région Bourgogne Franche-Comté. C’est aussi la capitale de la région historique et culturelle de Franche-Comté. Les habitants se prénomment les bisontins, <strong>« on est bisontin ou on ne l’est pas »</strong> c’est l’hymne qui rode entre les habitants.</p>
+            <p class="lieu_article_texte_content">C’est la capitale du Doubs, un département de la région Bourgogne Franche-Comté anciennement la Franche-Comté seule. <strong>Besançon</strong> est une commune de <strong>118 647 habitants</strong>, située dans l’Est de la France. C’est aussi la capitale de la région historique et culturelle de Franche-Comté. Les habitants se prénomment les bisontins, <strong>« on est bisontin ou on ne l’est pas »</strong> c’est l’hymne qui rode entre les habitants.</p>
             <p class="lieu_article_texte_content">On peut retrouver de nombreuses choses, notamment de grande salle de concert (La Rodia) ou encore des grands complexes d’expositions (Micropolis) ou sportifs (La Malcombe, Léo Lagrange)</p>
             <p class="lieu_article_texte_content">Toutefois, si vous voulez visiter la ville, nous vous renvoyons vers le site web de <strong>Besançon</strong></p>
             <div class="lieu_article_texte_link">
@@ -66,7 +66,7 @@
         <article>
             <h3 class="lieu_article_texte_tittle">La ville au coeur de l'évolution</h3>
             <p class="lieu_article_texte_content">L’évolution propre c’est l’une des politiques de la ville, cela provoque notamment un engagement important : <strong>environnement, biodiversité, énergie, climat, eau, déchets, mobilité…</strong></p>
-            <p class="lieu_article_texte_content">De nombreuses idées & projets sont mis en place afin de montrer l’évolution propre aux autres villes On peut citer le <strong>commerce éco-engagé, le parcours écocitoyen</strong> mais aussi le <strong>développement durable des quartiers.</strong></p>
+            <p class="lieu_article_texte_content">De nombreuses idées & projets sont mis en place afin de montrer l’évolution propre aux autres villes. On peut citer le <strong>commerce éco-engagé, le parcours écocitoyen</strong> mais aussi le <strong>développement durable des quartiers.</strong></p>
             <p class="lieu_article_texte_content">La ville met en place de nombreux moyens pour évoluer sans pour autant polluer plus ! Les gens ont compris les enjeux de leurs actions, parmi les choses mises en place, on retrouve les <strong>transports en communs.</strong> Des <strong>tramways,</strong> de nombreux <strong>bus</strong> ou encore des <strong>vélos</strong> sont mis en place dans la ville afin de réduire l’utilisation de la voiture et donc diminuer <strong>l’impact écologique.</strong></p>
             <p class="lieu_article_texte_content">Malheureusement, un trop grand nombre de villes ont tendance à laisser passer ce combat pour l’écologie, pour l’environnement, pour sauver la planète mais on retrouve quand même certaines villes qui fournissent des efforts et cela fait plaisir !</p>
             <img src="../public/img/Citadelle_Besac.webp" alt="Photo de la citadelle de Besançon">
@@ -102,7 +102,7 @@
         <ul class="liens_footer">
         <li><a class="liens_footer" href="/index.html">ACCUEIL</a></li>
         <li><a class="liens_footer" href="/fr/glossaire_fr.html">GLOSSAIRE</a></li>
-        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRE PROJETS</a></li>
+        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRES PROJETS</a></li>
         <li><a class="liens_footer" href="/fr/apropos_fr.html">À PROPOS</a></li>
         <li><a class="liens_footer" href="/fr/contact_fr.html">CONTACT</a></li>
         </ul>
