correction livre fr

--- a/fr/livre_fr.html
+++ b/fr/livre_fr.html
@@ -42,7 +42,7 @@
                 <li><a href="/fr/espoir_fr.html">> Sauver la planète</a></li>
                 <li><a href="/fr/regret_fr.html">> Le réchauffement climatique</a></li>
                 <li><a href="/fr/glossaire_fr.html">> Glossaire</a></li>
-                <li><a href="/fr/autreprojets_fr.html">> Autre projets</a></li>
+                <li><a href="/fr/autreprojets_fr.html">> Autres projets</a></li>
                 <li><a href="/fr/apropos_fr.html">> À propos</a></li>
                 <li><a href="/fr/contact_fr.html">> Contact</a></li>
             </ul>
@@ -73,7 +73,7 @@
         <article>
             <h3 class="livre_article_texte_tittle">Mais qui est Michael Crichton ?</h3>
             <p class="livre_article_texte_content">
-            Il est né le 23 octobre 1942 à Chicago et mort le 4 novembre 2008 à Los Angeles.
+            Il est né le 23 octobre 1942 à Chicago et décède le 4 novembre 2008 à Los Angeles.
             C'est avant tout un écrivain américain dans la science-fiction. Il est aussi scénariste et producteur de films.
             Parmis ses principaux romans et nouvelles à succès, on compte Jurassic Park, Le Monde perdu, Sphère, Westworld et 13e Guerrier.
             </p>
@@ -88,7 +88,7 @@
             </p>
             <p class="livre_article_texte_content">(voir article sur le réchauffement climatique).</p>
             <p class="livre_article_texte_content">
-            On pourrait aussi citer la montée des eaux ou encore plein d’autres phénomène qui vont ou se sont déjà produits à cause la négligence des gens dans le monde. C’est pour cela que l’on catégorise cela de combat, un combat pour sauver la planète.
+            On pourrait aussi citer la montée des eaux ou encore plein d’autres phénomènes qui vont ou se sont déjà produits à cause de la négligence des gens dans le monde. C’est pour cela que l’on catégorise cela en combat, un combat pour sauver la planète.
             En appelant son roman État d’urgence, Michael Crichton voulait avant tout faire réagir ses lecteurs : leur montrer que le temps compte. Si vous lisez ses lignes c’est que vous avez réussi ou bien qu’il est trop tard.
             </p>
         </article>
@@ -140,7 +140,7 @@
         <ul class="liens_footer">
         <li><a class="liens_footer" href="/index.html">ACCUEIL</a></li>
         <li><a class="liens_footer" href="/fr/glossaire_fr.html">GLOSSAIRE</a></li>
-        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRE PROJETS</a></li>
+        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRES PROJETS</a></li>
         <li><a class="liens_footer" href="/fr/apropos_fr.html">À PROPOS</a></li>
         <li><a class="liens_footer" href="/fr/contact_fr.html">CONTACT</a></li>
         </ul>
