--- a/fr/musique_fr.html
+++ b/fr/musique_fr.html
@@ -42,7 +42,7 @@
                 <li><a href="/fr/espoir_fr.html">> Sauver la planète</a></li>
                 <li><a href="/fr/regret_fr.html">> Le réchauffement climatique</a></li>
                 <li><a href="/fr/glossaire_fr.html">> Glossaire</a></li>
-                <li><a href="/fr/autreprojets_fr.html">> Autre projets</a></li>
+                <li><a href="/fr/autreprojets_fr.html">> Autres projets</a></li>
                 <li><a href="/fr/apropos_fr.html">> À propos</a></li>
                 <li><a href="/fr/contact_fr.html">> Contact</a></li>
             </ul>
@@ -51,14 +51,14 @@
     <main>
         <p class="musique_article_intro">De nombreuses musiques ont été créer afin de rendre hommage à des grands hommes et grandes femmes malheureusement décédés dans l’exercice de leur fonction ou tout simplement par vieillissement.</p>
         <p class="musique_article_intro">On peut citer par ex : la musique « See you Again » par Wiz Khalifa & Charlie Puth.</p>
-        <p class="musique_article_intro">De base cette musique était la soundtrack de Fast and Furious 7 mais il s’avère finalement d’un hommage à Paul Walker mort accidentellement d’un accident de voiture pendant le tournage du 7e opus de la saga.</p>
+        <p class="musique_article_intro">De base cette musique était la soundtrack de Fast and Furious 7 mais il s’avère finalement d’un hommage à Paul Walker mort accidentellement d’un accident de voiture pendant le tournage du 7ème opus de la saga.</p>
         <p class="musique_article_intro">Revenons sur notre sujet,</p> 
         <p class="musique_article_intro">LND c’est quoi ?</p>
         <img src="../public/img/musique_legends_1.webp" alt="Image Musique Legends nerver die">
 
         <article>
             <h3 class="musique_article_texte_tittle">LND, c'est quoi ?</h3>
-            <p class="musique_article_texte_content">C'est avant tout une abréviation de la chason originale qui porte le nom de "Legends Never Die" en francais, "Les légendes ne meurent jamais".</p>
+            <p class="musique_article_texte_content">C'est avant tout une abréviation de la chanson originale qui porte le nom de "Legends Never Die" en francais, "Les légendes ne meurent jamais".</p>
             <p class="musique_article_texte_content">Celle-ci a été écrite par la <strong>Riot Games Music, Alex Seaver of Mako, Oliver.</strong> Elle est aussi en collaboration avec l'artiste portant le nom de <strong>Against The Current.</strong></p>
             <p class="musique_article_texte_content">A l'origine, cette chanson a été utiliser comme chanson officielle pour les championnats du monde de la <strong>saison 2017</strong> du jeu <strong>League of Legends.</strong></p>
             <p class="musique_article_texte_content">
@@ -76,7 +76,7 @@
         </article>
         <article>
             <h3 class="musique_article_texte_tittle">League of Legends</h3>
-            <p class="musique_article_texte_content">A la base, LOL, abréviation du nom du jeu vidéo, est surtout un jeu de stratégie sorti en 2009. Il regroupe un jeu dans une arène de bataille en ligne, free-to-play développé par Riot Games. Le mode principal du jeu est de voir s’affronter deux équipes de 5 joueurs en temps réel. Le but étant de détruire la base de l’ennemie. Les batailles peuvent durer de 30 min à 1h lors de grande prolongation.</p>
+            <p class="musique_article_texte_content">A la base, LOL, abréviation du nom du jeu vidéo, est surtout un jeu de stratégie sorti en 2009. Il regroupe un jeu dans une arène de bataille en ligne, free-to-play développée par Riot Games. Le mode principal du jeu est de voir s’affronter deux équipes de 5 joueurs en temps réel. Le but étant de détruire la base de l’ennemi. Les batailles peuvent durer de 30 min à 1h lors de grande prolongation.</p>
             <p class="musique_article_texte_content">Pour plus d’informations, le jeu est disponible à l’installation à ce lien :</p>
             <div class="musique_article_texte_link">
             <a href="https://www.leagueoflegends.com/fr-fr/" target="_blank">https://www.leagueoflegends.com/fr-fr/</a>
@@ -96,7 +96,7 @@
         <ul class="liens_footer">
         <li><a class="liens_footer" href="/index.html">ACCUEIL</a></li>
         <li><a class="liens_footer" href="/fr/glossaire_fr.html">GLOSSAIRE</a></li>
-        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRE PROJETS</a></li>
+        <li><a class="liens_footer" href="/fr/autreprojets_fr.html">AUTRES PROJETS</a></li>
         <li><a class="liens_footer" href="/fr/apropos_fr.html">À PROPOS</a></li>
         <li><a class="liens_footer" href="/fr/contact_fr.html">CONTACT</a></li>
         </ul>
