correction 2 index fr

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             notre époque en 2022 ? Eh bien, ce site 
             est fait pour vous ! Retrouvez comment
             les combats dans le monde étaient perçus
-            à l’époque. Si vous lisez ses lignes c’est
+            à l’époque. Si vous lisez ces lignes c’est
              que vous avez gagné ou pas...</p>
             
         <article>
