--- a/fr/regret_fr.html
+++ b/fr/regret_fr.html
@@ -49,20 +49,20 @@
         </nav>
     </header>
     <main>
-        <p class="regret_article_intro">Encore une fois, un autre phénomène similaire à l’article sur l’espoir de sauvez la planète (nous vous invitons d’ailleurs à aller le voir), c’est le réchauffement climatique. L’une des conséquences de l’action humaine sur le globe mais c’est quoi le réchauffement climatique ?</p>
+        <p class="regret_article_intro">Encore une fois, un autre phénomène similaire à l’article sur l’espoir de Sauver la planète (nous vous invitons d’ailleurs à aller le voir), c’est le réchauffement climatique. L’une des conséquences de l’action humaine sur le globe mais c’est quoi le réchauffement climatique ?</p>
         <img src="../public/img/Réchauffement_1.webp" alt="Image du réchauffement climatique 1">
 
         <article>
             <h3 class="regret_article_texte_tittle">Le réchauffement climatique c'est quoi ?</h3>
             <p class="regret_article_texte_content">C’est un phénomène global de transformation du climat caractérisé notamment par une augmentation générale des températures. Ce phénomène est principalement provoqué par <strong>l’action humaine.</strong> Il modifie aussi par la même occasion <strong>l’équilibre météorologique</strong> ainsi que <strong>l’écosystème.</strong> Parmi les actions humaines on compte <strong>l’industrialisation, le dégagement de gaz à effet de serre</strong> mais aussi <strong>la pollution.</strong> Il y a encore une très grande liste qui influe sur le réchauffement climatique, mais nous n’allons pas l’écrire ici.</p>
             <p class="regret_article_texte_content">Les causes du réchauffement climatique sont surtout <strong>les gaz à effet de serre</strong> qui proviennent principalement de la production des énergies chauffage et électricité mais aussi le carburant pour les transports surtout pour la voiture.</p>
-            <p class="regret_article_texte_content">C’est bien gentil de parler des choses qui font mal mais comment pouvons nous lutter face au réchauffement climatique ?</p>
+            <p class="regret_article_texte_content">C’est bien gentil de parler des choses qui font mal mais comment pouvons-nous lutter face au réchauffement climatique ?</p>
             <p class="regret_article_texte_content">Comment faire face à cet énorme combat qui malheureusement s’offre à nous ?</p>
             <img src="../public/img/Réchauffement_2.webp" alt="Image du réchauffement climatique 2">
         </article>
         <article>
             <h3 class="regret_article_texte_tittle">Comment lutter face au réchauffement climatique ?</h3>
-            <p class="regret_article_texte_content">Il faudrait donc réduire la production de gaz à effet de serre, pour cela, il faudrait commencer déjà par utiliser uniquement <strong>des énergies renouvelables et non polluantes</strong> comme par ex : <strong>l’énergie des éoliennes, les panneaux solaires ou encore l’énergie hydraulique.</strong> On pourrait aussi songer à privilégier <strong>l’utilisation des transports en communs</strong> dans les villes ou même bien mieux <strong>le vélo ou ses pieds.</strong> Utilisez des autres moyens de transports, tout <strong>sauf la voiture.</strong> Afin de réduire ce réchauffement climatique, il faudrait que chaque être humains réagisse et prenne conscience que ses actes vont se répandre <strong>sur des générations de générations.</strong></p>
+            <p class="regret_article_texte_content">Il faudrait donc réduire la production de gaz à effet de serre, pour cela, il faudrait commencer déjà par utiliser uniquement <strong>des énergies renouvelables et non polluantes</strong> comme par ex : <strong>l’énergie des éoliennes, les panneaux solaires ou encore l’énergie hydraulique.</strong> On pourrait aussi songer à privilégier <strong>l’utilisation des transports en commun</strong> dans les villes ou même bien mieux <strong>le vélo ou ses pieds.</strong> Utilisez des autres moyens de transport, tout <strong>sauf la voiture.</strong> Afin de réduire ce réchauffement climatique, il faudrait que chaque être humain réagisse et prenne conscience que ses actes vont se répandre <strong>sur des générations de générations.</strong></p>
             <p class="regret_article_texte_content">Qu’en pensez-vous est-il trop tard ? Avons-nous encore le temps pour préparer notre approche ? </p>
             <p class="regret_article_texte_content">Page d'accueil : Retour à l'accueil</p>
             <div class="regret_article_texte_content_center">
