--- a/fr/musique_fr.html
+++ b/fr/musique_fr.html
@@ -49,7 +49,7 @@
         </nav>
     </header>
     <main>
-        <p class="musique_article_intro">De nombreuses musiques ont été créer afin de rendre hommage à des grands hommes et grandes femmes malheureusement décédés dans l’exercice de leur fonction ou tout simplement par vieillissement.</p>
+        <p class="musique_article_intro">De nombreuses musiques ont été créer afin de rendre hommage à de grands hommes et grandes femmes malheureusement décédés dans l’exercice de leur fonction ou tout simplement par vieillissement.</p>
         <p class="musique_article_intro">On peut citer par ex : la musique « See you Again » par Wiz Khalifa & Charlie Puth.</p>
         <p class="musique_article_intro">De base cette musique était la soundtrack de Fast and Furious 7 mais il s’avère finalement d’un hommage à Paul Walker mort accidentellement d’un accident de voiture pendant le tournage du 7ème opus de la saga.</p>
         <p class="musique_article_intro">Revenons sur notre sujet,</p> 
@@ -60,12 +60,8 @@
             <h3 class="musique_article_texte_tittle">LND, c'est quoi ?</h3>
             <p class="musique_article_texte_content">C'est avant tout une abréviation de la chanson originale qui porte le nom de "Legends Never Die" en francais, "Les légendes ne meurent jamais".</p>
             <p class="musique_article_texte_content">Celle-ci a été écrite par la <strong>Riot Games Music, Alex Seaver of Mako, Oliver.</strong> Elle est aussi en collaboration avec l'artiste portant le nom de <strong>Against The Current.</strong></p>
-            <p class="musique_article_texte_content">A l'origine, cette chanson a été utiliser comme chanson officielle pour les championnats du monde de la <strong>saison 2017</strong> du jeu <strong>League of Legends.</strong></p>
-            <p class="musique_article_texte_content">
-            Mais pour nous, elle signifie bien plus. Elle permet de se remémorer les moments passés avec des personnes, ou bien tout simplement un hommage pour les personnes qui ont lutté pour de grandes choses. 
-            Cette musique nous montre bien plus grâce en particulier aux paroles fortes et émouvantes notamment : 
-            <strong>« Les légendes ne meurent jamais ».</strong>
-            </p>
+            <p class="musique_article_texte_content">À l'origine, cette chanson a été utiliser comme chanson officielle pour les championnats du monde de la <strong>saison 2017</strong> du jeu <strong>League of Legends.</strong></p>
+            <p class="musique_article_texte_content">Mais pour nous, elle signifie bien plus. Elle permet de se remémorer les moments passés avec des personnes, ou bien tout simplement un hommage pour les personnes qui ont lutté pour de grandes choses. Cette musique nous montre bien plus grâce en particulier aux paroles fortes et émouvantes notamment : <strong>« Les légendes ne meurent jamais ».</strong></p>
             <p class="musique_article_texte_content">Les légendes qui sont des personnes fortes pour nous : amis / sœur / frère / famille / ou bien plus.</p>
             <p class="musique_article_texte_content">La musique est disponible à l’écoute à ce lien :</p>
             <div class="musique_article_texte_link">
@@ -76,7 +72,7 @@
         </article>
         <article>
             <h3 class="musique_article_texte_tittle">League of Legends</h3>
-            <p class="musique_article_texte_content">A la base, LOL, abréviation du nom du jeu vidéo, est surtout un jeu de stratégie sorti en 2009. Il regroupe un jeu dans une arène de bataille en ligne, free-to-play développée par Riot Games. Le mode principal du jeu est de voir s’affronter deux équipes de 5 joueurs en temps réel. Le but étant de détruire la base de l’ennemi. Les batailles peuvent durer de 30 min à 1h lors de grande prolongation.</p>
+            <p class="musique_article_texte_content">À la base, LOL, abréviation du nom du jeu vidéo, est surtout un jeu de stratégie sorti en 2009. Il regroupe un jeu dans une arène de bataille en ligne, free-to-play développée par Riot Games. Le mode principal du jeu est de voir s’affronter deux équipes de 5 joueurs en temps réel. Le but étant de détruire la base de l’ennemi. Les batailles peuvent durer de 30 min à 1h lors de grandes prolongations.</p>
             <p class="musique_article_texte_content">Pour plus d’informations, le jeu est disponible à l’installation à ce lien :</p>
             <div class="musique_article_texte_link">
             <a href="https://www.leagueoflegends.com/fr-fr/" target="_blank">https://www.leagueoflegends.com/fr-fr/</a>
